# copto_mix

./: CMakeLists.txt  package.xml
include/copto_mix/: mix_component.hpp
src/: copto_mix_node.cpp  mix_component.cpp
